[gd_scene load_steps=50 format=2]

[ext_resource path="res://Player/sprites/Player/BodyMale/BodyFront.PNG" type="Texture" id=1]
[ext_resource path="res://Player/sprites/Player/Head.PNG" type="Texture" id=2]
[ext_resource path="res://Player/Arm/Arm.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/states/Walking.gd" type="Script" id=4]
[ext_resource path="res://utils/StateMachine/StateMachine.tscn" type="PackedScene" id=5]
[ext_resource path="res://utils/StateMachine/State.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/player.gd" type="Script" id=7]
[ext_resource path="res://Player/states/MidAir.gd" type="Script" id=8]
[ext_resource path="res://Player/states/Climbing.gd" type="Script" id=9]
[ext_resource path="res://Player/sprites/Player/BodyMale/HairBack.PNG" type="Texture" id=10]
[ext_resource path="res://Player/sprites/Player/BodyMale/HairFront.PNG" type="Texture" id=11]
[ext_resource path="res://Player/sprites/Player/BodyMale/HairSide.PNG" type="Texture" id=12]
[ext_resource path="res://Player/sprites/Player/BodyMale/BodySide.PNG" type="Texture" id=13]
[ext_resource path="res://Player/animations/Walking.anim" type="Animation" id=14]
[ext_resource path="res://Player/animations/FrontToSide.tres" type="Animation" id=15]
[ext_resource path="res://Player/animations/PlayerFrontToLeft.tres" type="Animation" id=16]
[ext_resource path="res://Player/animations/PlayerSideToBack.tres" type="Animation" id=17]
[ext_resource path="res://Player/animations/PlayerSideToFront.tres" type="Animation" id=18]
[ext_resource path="res://Player/animations/PlayerIdle.tres" type="Animation" id=19]
[ext_resource path="res://Level/Level1/sprites/pipe.png" type="Texture" id=20]
[ext_resource path="res://Player/animations/PlayerHit.tres" type="Animation" id=21]
[ext_resource path="res://Player/animations/Reset.tres" type="Animation" id=22]
[ext_resource path="res://Level/Level3/sprites/hammer.png" type="Texture" id=23]

[sub_resource type="CapsuleShape2D" id=27]
radius = 24.6024
height = 71.3754

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 13.478, 10 )

[sub_resource type="GDScript" id=29]
script/source = "extends Camera2D

func _process(delta):
	global_rotation = global_position.angle() + PI/2
"

[sub_resource type="Animation" id=34]
resource_name = "HandsUp"
tracks/0/type = "value"
tracks/0/path = NodePath("ArmRight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 150.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ArmLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -150.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "FrontToLeft"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "FrontToRight"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "PlayerIdle"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Reset"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "SideToBack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walking"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=32]
states/FrontToLeft/node = SubResource( 4 )
states/FrontToLeft/position = Vector2( 338, 46 )
states/FrontToRight/node = SubResource( 5 )
states/FrontToRight/position = Vector2( 338, 293 )
states/Hit/node = SubResource( 6 )
states/Hit/position = Vector2( 374, 200 )
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 202, 131 )
states/Reset/node = SubResource( 30 )
states/Reset/position = Vector2( 534, 131 )
states/SideToBack/node = SubResource( 9 )
states/SideToBack/position = Vector2( 730, 131 )
states/WalkLeft/node = SubResource( 10 )
states/WalkLeft/position = Vector2( 534, 46 )
states/WalkRight/node = SubResource( 11 )
states/WalkRight/position = Vector2( 534, 216 )
transitions = [ "Idle", "FrontToLeft", SubResource( 12 ), "FrontToLeft", "WalkLeft", SubResource( 13 ), "FrontToRight", "WalkRight", SubResource( 14 ), "Idle", "FrontToRight", SubResource( 15 ), "WalkLeft", "SideToBack", SubResource( 16 ), "WalkRight", "SideToBack", SubResource( 17 ), "Idle", "Hit", SubResource( 18 ), "WalkLeft", "Reset", SubResource( 20 ), "WalkRight", "Reset", SubResource( 21 ), "Reset", "Idle", SubResource( 22 ), "SideToBack", "Reset", SubResource( 31 ), "Hit", "Reset", SubResource( 26 ) ]
start_node = "Idle"
graph_offset = Vector2( -34, 37 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[node name="Player" type="KinematicBody2D" groups=["PLAYER"]]
z_index = 10
z_as_relative = false
collision_mask = 2
script = ExtResource( 7 )

[node name="HairSprites" type="Node2D" parent="."]
position = Vector2( 0, -68 )

[node name="HairFront" type="Sprite" parent="HairSprites" groups=["one_side_body_part"]]
position = Vector2( 0, -6 )
z_index = 1
texture = ExtResource( 11 )

[node name="HairSide" type="Sprite" parent="HairSprites" groups=["one_side_body_part"]]
visible = false
z_index = 1
texture = ExtResource( 12 )
flip_h = true

[node name="HairBack" type="Sprite" parent="HairSprites" groups=["one_side_body_part"]]
visible = false
z_index = 1
texture = ExtResource( 10 )

[node name="BodySprites" type="Node2D" parent="."]

[node name="BodySide" type="Sprite" parent="BodySprites" groups=["one_side_body_part"]]
visible = false
texture = ExtResource( 13 )
flip_h = true

[node name="BodyFront" type="Sprite" parent="BodySprites" groups=["one_side_body_part"]]
texture = ExtResource( 1 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -64 )
texture = ExtResource( 2 )

[node name="ArmRight" parent="." instance=ExtResource( 3 )]
position = Vector2( -18, -32 )
z_index = 1

[node name="Items" type="Node2D" parent="ArmRight"]
position = Vector2( 0, 40 )

[node name="pipe" type="Sprite" parent="ArmRight/Items"]
visible = false
position = Vector2( 46, 0 )
z_index = -1
texture = ExtResource( 20 )

[node name="hammer" type="Sprite" parent="ArmRight/Items"]
visible = false
position = Vector2( 35, -11 )
rotation = 1.309
z_index = -1
texture = ExtResource( 23 )

[node name="ArmLeft" parent="." instance=ExtResource( 3 )]
position = Vector2( 18, -32 )
z_index = 2
ARM = 1

[node name="CollisionCapsule" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -21.3513 )
shape = SubResource( 27 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionFeet" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 28.9731 )
shape = SubResource( 28 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateMachine" parent="." instance=ExtResource( 5 )]
physics_processing = true
standard_processing = true
process_input = true
initial_state = NodePath("Walking")

[node name="MidAir" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 8 )

[node name="Climbing" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 9 )

[node name="Walking" parent="StateMachine" instance=ExtResource( 6 )]
script = ExtResource( 4 )

[node name="AnimationPlaying" parent="StateMachine" instance=ExtResource( 6 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -222 )
rotating = true
current = true
script = SubResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FrontToLeft = ExtResource( 16 )
anims/FrontToRight = ExtResource( 15 )
anims/HandsUp = SubResource( 34 )
anims/Hit = ExtResource( 21 )
anims/PlayerIdle = ExtResource( 19 )
anims/Reset = ExtResource( 22 )
anims/SideToBack = ExtResource( 17 )
anims/SideToFront = ExtResource( 18 )
anims/Walking = ExtResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 32 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 33 )
